kubernetes/Int/deployments/default/code-server/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: lscr.io/linuxserver/code-server:4.93.1
          volumeMounts:
            - name: homepage
              mountPath: /pvcs/homepage
      volumes:
        - name: homepage
          persistentVolumeClaim:
            claimName: homepage
