kubernetes/Int/deployments/default/code-server/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: code-server
spec:
    selector:
        app: code-server
    ports:
        - name: ui
          port: 8443
