kubernetes/Int/deployments/default/code-server/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: code-server.svc.noms.tv
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              number: 8443
